--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,6 @@
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=avengers_ecommerce
-DB_HOST=localhost
-DB_PORT=5432
+DB_HOST=roundhouse.proxy.rlwy.net
+DB_PORT=13322
 PORT= 8080
