--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,6 @@
 DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=avengers_ecommerce
+DB_PASSWORD=4d2B6BCEe5-a2GBgca41B2FBC-ggfegE
+DB_NAME=railway
 DB_HOST=roundhouse.proxy.rlwy.net
 DB_PORT=13322
 PORT= 8080
